--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@lbgm/phone-number-input": "^1.1.6",
     "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/vite": "^4.1.4",
     "gsap": "^3.13.0",
     "nuxt": "^3.16.2",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-tel-input": "^8.1.3"
   },
   "devDependencies": {
     "@nuxt/ui": "^3.0.2",
